fix(sidenav): fix sideNav z-index (#71)

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -87,7 +87,7 @@
     position: fixed;
     top: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: 200;
     transition: all 0.3s;
     min-height: 100%;
 
